testsuite/tests/linear/should_fail/LinearSeq.stderr

LinearSeq.hs:6:5: error:
    • Couldn't match type ‘'Omega’ with ‘'One’
        arising from multiplicity of ‘x’
    • In an equation for ‘bad’: bad x = seq x ()
